[refactor] 테스트 속도 개선 (#1139)
* test: refactor integration tests to extend IntegrationTestSupport and update database configurations

* chore: update .gitignore to exclude Claude Code local settings file

* test: 불필요한 Thread.Sleep 제거

* test: update test configurations and add safeguards for concurrent task execution

- Replace `ShutDownTestScheduler` with `Mockito.mock` to create a no-op `TaskScheduler`.
- Remove unnecessary configuration annotations in `WebSocketIntegrationTestSupport` by extending `@IntegrationTest`.
- Add a guard condition in `RouletteService` to skip saving already completed roulette results.
- Reintroduce `MockitoSpyBean` for `DelayedRoomRemovalService` in `RoomCreateConsumerTest`.

* Update backend/src/test/java/coffeeshout/fixture/TestContainerSupport.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* refactor: update RedisLock annotations in RoulettePersistenceService for improved key structure and naming consistency

* test: remove unnecessary database-platform configuration from application-test.yml

* refactor: change transaction propagation to REQUIRES_NEW in OutboxEventProcessor methods

* test: update test container configurations and refactor integration test inheritance

- Adjust `VALKEY_DISABLE_COMMANDS` environment variable in `TestContainerSupport`.
- Use try-with-resources for Redis connection cleanup.
- Refactor `WebSocketIntegrationTestSupport` to extend `IntegrationTestSupport` instead of using `@IntegrationTest`.

* Revert "refactor: change transaction propagation to REQUIRES_NEW in OutboxEventProcessor methods"

This reverts commit 4898f0e35a5fd66eba6afccf540109fa6d62b61a.

* refactor: replace `get(0)` with `getFirst()` in test assertions and method calls for improved readability and consistency

* test: refactor integration tests and improve configuration consistency

- Extend `IntegrationTestSupport` in `OracleObjectStorageIntegrationTest` for better test inheritance.
- Adjust Redis configuration